2001-06-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (execute_function):
	fixed memory leak

	* fvwm/decorations.c (GetMwmHints):
	fixed memory leak

	* fvwm/session.c (SaveWindowStates):
	make sure the string list is properly freed

	* libs/Makefile.am (libfvwm_a_SOURCES):
	* libs/Event.c (GetSubwindowFromEvent):
	new file and function

	* fvwm/functions.c (execute_function):
	fixed UMR

	* fvwm/session.c (MatchWinToSM):
	fixed a memory leak when using session management

	* fvwm/session.c (LoadWindowStates):
	(duplicate):
	* fvwm/builtins.c (CMD_StrokeFunc):
	use saferealloc instead of realloc
	use safemalloc instead of malloc

2001-06-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (destroy_icon_font):
	check if icon_font == default font before deleting the icon_font,
	not if title_font == default font

2001-06-03  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/style.c (CMD_Style):
	accept style option Layer without argument

2001-06-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/virtual.c (map_window):
	prevent that dying windows are mapped again during a desk change

2001-06-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (restore_focus_after_unmap):
	ignore transientfor windows on other desks and honour Skip... styles
	when restoring focus

2001-05-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (setup_key_and_button_grabs):
	fixed bug #711 (key bindings not properly removed)

	* fvwm/events.c (GetContext):
	fix to catch button presses with unclutter

2001-05-29  Mikhael Goikhman  <migo@homemail.com>

	* acconfig.h:
	a fix for autoconf-2.50

	* fvwm/module_interface.c (PositiveWrite):
	print module name and alias in "Failed to read descriptor" error

2001-05-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (destroy_window):
	unmap the window immediately when it's going to be destroyed soo so that
	it does not hang around during a wait
	(destroy_window):